--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Simply Maro</title>
+	<title>Simply Maro -- Coming soon -- Coming soon -- Coming soon -- Coming soon -- Coming soon -- Coming soon -- Coming soon -- Coming soon -- Coming soon</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
